--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ jobs:
           if git diff --quiet origin/${{ github.base_ref }} -- website; then
             echo "skip=true" >> $GITHUB_ENV
           fi
+      
+      - name: Set up pnpm
+        if: env.skip != 'true'
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
       - name: Install dependencies
         if: env.skip != 'true'
@@ -41,6 +47,12 @@ jobs:
             echo "skip=true" >> $GITHUB_ENV
           fi
 
+      - name: Set up pnpm
+        if: env.skip != 'true'
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Install dependencies
         if: env.skip != 'true'
         working-directory: templates/app/with-i18n-routing
@@ -65,6 +77,12 @@ jobs:
             echo "skip=true" >> $GITHUB_ENV
           fi
 
+      - name: Set up pnpm
+        if: env.skip != 'true'
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Install dependencies
         if: env.skip != 'true'
         working-directory: templates/app/without-i18n
@@ -88,6 +106,12 @@ jobs:
           if git diff --quiet origin/${{ github.base_ref }} -- templates/app/without-i18n-routing; then
             echo "skip=true" >> $GITHUB_ENV
           fi
+
+      - name: Set up pnpm
+        if: env.skip != 'true'
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
       - name: Install dependencies
         if: env.skip != 'true'
