新しいURLに変更

--- a/packages/nextjs-rich-tpl/package.json
+++ b/packages/nextjs-rich-tpl/package.json
@@ -29,7 +29,7 @@
     "url": "https://github.com/toaki-cltv/nextjs-rich-tpl/issues",
     "email": "toakiryu@gmail.com"
   },
-  "homepage": "https://nextjs-rich-tpl.toakiryu.com",
+  "homepage": "https://nextjs-rich-tpl.cltv.toaki.cc",
   "license": "MIT",
   "keywords": [
     "nextjs",
