--- a/templates/app/with-i18n-routing/package.json
+++ b/templates/app/with-i18n-routing/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@nextjs-rich-tpl/with-i18n-routing",
-  "version": "15.5.5",
+  "version": "16.0.0",
   "private": true,
   "scripts": {
     "dev": "pnpm run mergeTranslations && next dev",
     "build": "pnpm run mergeTranslations && next build",
     "start": "next start",
-    "lint": "next lint",
-    "mergeTranslations": "node ./.job/mergeTranslations.js"
+    "lint": "eslint",
+    "mergeTranslations": "node ./_job/mergeTranslations.js"
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.2.6",
@@ -18,24 +18,30 @@
     "deepmerge": "^4.3.1",
     "lenis": "^1.3.11",
     "lucide-react": "^0.546.0",
-    "next": "15.5.5",
-    "next-intl": "^4.3.12",
+    "next": "16.0.0",
+    "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.15",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^24.9.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "eslint": "^9.38.0",
-    "eslint-config-next": "15.5.6",
-    "tailwindcss": "^4.1.15",
+    "eslint-config-next": "16.0.0",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.2",
+      "@types/react-dom": "19.2.2"
+    }
   }
 }
