--- a/templates/app/without-i18n-routing/package.json
+++ b/templates/app/without-i18n-routing/package.json
@@ -5,7 +5,7 @@
     "dev": "pnpm run mergeTranslations && next dev",
     "build": "pnpm run mergeTranslations && next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint",
     "mergeTranslations": "node ./.job/mergeTranslations.js"
   },
   "dependencies": {
@@ -17,7 +17,7 @@
     "deepmerge": "^4.3.1",
     "lenis": "^1.3.11",
     "lucide-react": "^0.546.0",
-    "next": "15.5.5",
+    "next": "16.0.0",
     "next-intl": "^4.3.12",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
