--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "@nextjs-rich-tpl/root",
   "private": true,
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "cleanup": "node ./scripts/cleanMacJunkFiles.mjs",
-    "clean": "node ./clean.mjs"
+    "clean": "node ./clean.mjs",
+    "smoke-test": "node ./scripts/smoke-test.js"
   },
   "license": "MIT",
   "engines": {
@@ -12,5 +14,9 @@
     "npm": "use pnpm please!",
     "yarn": "use pnpm please!"
   },
-  "packageManager": "pnpm@10.15.0"
+  "packageManager": "pnpm@10.15.0",
+  "dependencies": {
+    "chalk": "^5.6.2",
+    "inquirer": "^12.10.0"
+  }
 }
