Add CI workflows and post-create script support
Introduces new GitHub Actions workflows for post-create and remote index CI, replaces the publish workflow with a more general version, and updates the CLI to support post-create scripts for templates. Adds a minimal CI template with a post-create script, updates argument parsing for non-interactive use, and improves error handling and cleanup logic. Also documents the templates/index.json format and updates package.json with a templates index URL.

--- a/package.json
+++ b/package.json
@@ -19,4 +19,8 @@
     "chalk": "^5.6.2",
     "inquirer": "^12.10.0"
   }
+  ,
+  "config": {
+    "templatesIndexUrl": "https://raw.githubusercontent.com/toaki-cltv/nextjs-rich-tpl/main/templates/index.json"
+  }
 }
