Add schema validation and hash checks for templates index
Introduces Ajv-based JSON schema validation for templates/index.json and remote template indexes, using a new templates/index.schema.json. Adds support for optional SHA256 hash verification of git-sourced templates. Updates CLI flags: --accept-postcreate now explicitly opts in to running post-create scripts, while --yes no longer does so for safety. Adds a GitHub Actions workflow and script to validate the remote index against the schema.

--- a/.github/workflows/postcreate-ci.yml
+++ b/.github/workflows/postcreate-ci.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Run create with ci-postcreate template (auto-run postCreate)
         run: |
-          node ./packages/create-next-rich-tpl/bin/create.mjs --template app/ci-postcreate --name postcreate-app --yes --verbose
+          node ./packages/create-next-rich-tpl/bin/create.mjs --template app/ci-postcreate --name postcreate-app --accept-postcreate --verbose
 
       - name: Verify marker file was written by post-create
         run: |
