--- a/packages/create-next-rich-tpl/package.json
+++ b/packages/create-next-rich-tpl/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "inquirer": "^9.2.7",
     "chalk": "^5.2.0",
-    "degit": "^2.8.4"
+    "degit": "^2.8.4",
+    "ajv": "^8.12.0"
   }
 }
