--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "packageManager": "pnpm@10.15.0",
   "dependencies": {
     "chalk": "^5.6.2",
-    "inquirer": "^12.10.0"
-  }
-  ,
+    "inquirer": "^12.10.0",
+    "ajv": "^8.12.0"
+  },
   "config": {
     "templatesIndexUrl": "https://raw.githubusercontent.com/toaki-cltv/nextjs-rich-tpl/main/templates/index.json"
   }
