Optimize CI workflows with conditional triggers and steps
Added path filters to remote-index, smoke-test, and validate-remote-index workflows to limit runs to relevant file changes. Updated postcreate-ci workflow to skip steps if no changes detected in packages/create-next-rich-tpl, improving CI efficiency.

--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -3,8 +3,18 @@ name: Smoke tests
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'templates/**'
+      - 'scripts/**'
+      - 'packages/create-next-rich-tpl/**'
+      - '.github/workflows/smoke-test.yml'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'templates/**'
+      - 'scripts/**'
+      - 'packages/create-next-rich-tpl/**'
+      - '.github/workflows/smoke-test.yml'
 
 jobs:
   smoke-test:
