--- a/.github/workflows/postcreate-ci.yml
+++ b/.github/workflows/postcreate-ci.yml
@@ -12,19 +12,32 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Check for changes
+        id: changes
+        run: |
+          git fetch origin ${{ github.base_ref }} --depth=1
+          if git diff --quiet origin/${{ github.base_ref }} -- packages/create-next-rich-tpl; then
+            echo "skip=true" >> $GITHUB_ENV
+          fi
+
       - name: Setup Node.js
+        if: env.skip != 'true'
         uses: actions/setup-node@v4
 
       - name: Setup pnpm
+        if: env.skip != 'true'
         uses: pnpm/action-setup@v4
 
       - name: Install workspace deps
+        if: env.skip != 'true'
         run: pnpm install --frozen-lockfile
 
       - name: Run create with ci-postcreate template (auto-run postCreate)
+        if: env.skip != 'true'
         run: |
           node ./packages/create-next-rich-tpl/bin/create.mjs --template app/ci-postcreate --name postcreate-app --accept-postcreate --verbose
 
       - name: Verify marker file was written by post-create
+        if: env.skip != 'true'
         run: |
           test -f postcreate-app/POSTCREATE_RAN || (ls -la postcreate-app && exit 2)
