--- a/.github/workflows/remote-index-ci.yml
+++ b/.github/workflows/remote-index-ci.yml
@@ -4,6 +4,11 @@ on:
   workflow_dispatch:
   push:
     branches: [ main ]
+    paths:
+      - 'templates/**'
+      - 'scripts/**'
+      - 'packages/create-next-rich-tpl/**'
+      - '.github/workflows/remote-index-ci.yml'
 
 jobs:
   remote-index-create:
