Add progress UI and cleanup improvements to template CLI
Introduces a new cleanup.js script for background or synchronous cleanup of temporary directories with progress reporting. Enhances the create CLI with progress spinners and bars (using ora and cli-progress) for remote index fetching, git cloning, file copying, and cleanup. Updates copyRecursive to support progress bars, adds new dependencies (ora, cli-progress), and bumps package version to 0.0.1-beta.6.

--- a/packages/create-next-rich-tpl/package.json
+++ b/packages/create-next-rich-tpl/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-next-rich-tpl",
-  "version": "0.0.1-beta.5",
+  "version": "0.0.1-beta.6",
   "description": "Central create command that lists available templates and delegates to per-template create packages or local templates",
   "type": "module",
   "bin": {
@@ -28,7 +28,9 @@
     "inquirer": "^9.2.7",
     "chalk": "^5.2.0",
     "degit": "^2.8.4",
-    "ajv": "^8.12.0"
+    "ajv": "^8.12.0",
+    "ora": "^6.1.2",
+    "cli-progress": "^3.12.0"
   },
   "config": {
     "templatesIndexUrl": "https://raw.githubusercontent.com/toaki-cltv/nextjs-rich-tpl/main/templates/index.json"
