Improve pnpm install logic in GitHub workflows
Update CI workflows to check for the presence of pnpm-lock.yaml before using --frozen-lockfile. If the lockfile is missing, install dependencies without the frozen lockfile flag to prevent install failures.

--- a/.github/workflows/postcreate-ci.yml
+++ b/.github/workflows/postcreate-ci.yml
@@ -30,7 +30,12 @@ jobs:
 
       - name: Install workspace deps
         if: env.skip != 'true'
-        run: pnpm install --frozen-lockfile
+        run: |
+          if [ -f pnpm-lock.yaml ]; then
+            pnpm install --frozen-lockfile
+          else
+            pnpm install --no-frozen-lockfile
+          fi
 
       - name: Run create with ci-postcreate template (auto-run postCreate)
         if: env.skip != 'true'
