--- a/.github/workflows/remote-index-ci.yml
+++ b/.github/workflows/remote-index-ci.yml
@@ -24,7 +24,12 @@ jobs:
         uses: pnpm/action-setup@v4
 
       - name: Install workspace deps
-        run: pnpm install --frozen-lockfile
+        run: |
+          if [ -f pnpm-lock.yaml ]; then
+            pnpm install --frozen-lockfile
+          else
+            pnpm install --no-frozen-lockfile
+          fi
 
       - name: Use remote index (raw) and run create non-interactive
         env:
