--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,12 @@ jobs:
         uses: pnpm/action-setup@v4
 
       - name: Install dependencies (root)
-        run: pnpm install --frozen-lockfile
+        run: |
+          if [ -f pnpm-lock.yaml ]; then
+            pnpm install --frozen-lockfile
+          else
+            pnpm install --no-frozen-lockfile
+          fi
 
       - name: Run smoke tests
         run: node ./scripts/smoke-test.js
