--- a/.github/workflows/validate-remote-index.yml
+++ b/.github/workflows/validate-remote-index.yml
@@ -24,7 +24,12 @@ jobs:
         uses: pnpm/action-setup@v4
 
       - name: Install workspace deps
-        run: pnpm install --frozen-lockfile
+        run: |
+          if [ -f pnpm-lock.yaml ]; then
+            pnpm install --frozen-lockfile
+          else
+            pnpm install --no-frozen-lockfile
+          fi
 
       - name: Validate remote index against schema
         env:
