--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nextjs-rich-tpl/root",
+  "name": "@next-rich-tpl/root",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -14,10 +14,10 @@
     "npm": "use pnpm please!",
     "yarn": "use pnpm please!"
   },
-  "packageManager": "pnpm@10.15.0",
+  "packageManager": "pnpm@10.20.0",
   "dependencies": {
+    "ajv": "^8.17.1",
     "chalk": "^5.6.2",
-    "inquirer": "^12.10.0",
-    "ajv": "^8.12.0"
+    "inquirer": "^12.10.0"
   }
 }
