--- a/packages/create-next-rich-tpl/package.json
+++ b/packages/create-next-rich-tpl/package.json
@@ -27,13 +27,13 @@
     "pub:latest": "pnpm publish --access public --tag latest"
   },
   "dependencies": {
-    "inquirer": "^9.2.7",
-    "chalk": "^5.2.0",
-    "degit": "^2.8.4",
-    "ajv": "^8.12.0",
-    "ora": "^9.0.0",
+    "ajv": "^8.17.1",
+    "chalk": "^5.6.2",
     "cli-progress": "^3.12.0",
-    "commander": "^14.0.2"
+    "commander": "^14.0.2",
+    "degit": "^2.8.4",
+    "inquirer": "^9.3.8",
+    "ora": "^9.0.0"
   },
   "config": {
     "templatesIndexUrl": "https://raw.githubusercontent.com/toaki-cltv/nextjs-rich-tpl/main/templates/index.json"
