--- a/templates/app/with-i18n-routing/package.json
+++ b/templates/app/with-i18n-routing/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nextjs-rich-tpl/with-i18n-routing",
-  "version": "16.0.0",
+  "name": "@next-rich-tpl/with-i18n-routing",
+  "version": "16.0.1",
   "private": true,
   "scripts": {
     "dev": "pnpm run mergeTranslations && next dev",
@@ -9,6 +9,7 @@
     "lint": "eslint",
     "mergeTranslations": "node ./_job/mergeTranslations.js"
   },
+  "license": "MIT",
   "dependencies": {
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
@@ -16,9 +17,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "deepmerge": "^4.3.1",
-    "lenis": "^1.3.11",
+    "lenis": "^1.3.13",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "16.0.1",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
@@ -30,7 +31,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.16",
-    "@types/node": "^24.9.1",
+    "@types/node": "^24.9.2",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "eslint": "^9.38.0",
