--- a/templates/app/without-i18n/package.json
+++ b/templates/app/without-i18n/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nextjs-rich-tpl/without-i18n",
-  "version": "15.4.0",
+  "name": "@next-rich-tpl/without-i18n",
+  "version": "16.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,15 +8,16 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "license": "MIT",
   "dependencies": {
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lenis": "^1.3.11",
+    "lenis": "^1.3.13",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "16.0.1",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -26,13 +27,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.15",
-    "@types/node": "^24.9.1",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@types/node": "^24.9.2",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "eslint": "^9.38.0",
     "eslint-config-next": "16.0.0",
-    "tailwindcss": "^4.1.15",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3"
   },
   "pnpm": {
